changed bootstrap 4 to 5 in hope of fixing toggler on mobile devices and changed quiz.js and username.js positioning so windows.onload gets triggered for the popup

--- a/styles/style.css
+++ b/styles/style.css
@@ -133,33 +133,6 @@ button:focus {
 
 /**Main**/
 
-@media (max-width: 900px) {
-    .navbar-header {
-        float: none;
-    }
-    .navbar-toggle {
-        display: block;
-    }
-    .navbar-collapse {
-        border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-    }
-    .navbar-collapse.collapse {
-        display: none!important;
-    }
-    .navbar-nav {
-        float: none!important;
-        margin: 7.5px -15px;
-    }
-    .navbar-nav>li {
-        float: none;
-    }
-    .navbar-nav>li>a {
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-}
-
 /**Popup**/
 
 .popupWindow {
@@ -177,7 +150,7 @@ button:focus {
 
 .popupContent {
     background-color: #fefefe;
-    margin: 20% auto; 
+    margin: 15% auto; 
     padding: 20px;
     border: 1px solid #888;
     border-radius: 1rem;
@@ -187,6 +160,12 @@ button:focus {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     animation-name: slide;
     animation-duration: 1s
+}
+
+@media (max-width: 750px) {
+    .popupContent {
+        margin: 23% auto;
+    }
 }
 
 @keyframes slide {
